--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,6 @@ test:
 production:
   <<: *default
   database: colony_production
-  username: colony
+  user: <%= ENV['COLONY_DATABASE_USER'] %>
   password: <%= ENV['COLONY_DATABASE_PASSWORD'] %>
   url: <%= ENV['DATABASE_URL'] %>
